# payments_robot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: api_implementation_plan.md  embedded_payments_strategy.md  future_considerations.md  implementation_plan.md  routing_data_model.md  task.md
payments_service/: Dockerfile  start.sh
payments_service/app/: main.py
payments_service/app/api/: customers.py  dependencies.py  merchants.py  payments.py
payments_service/app/core/: settings.py
payments_service/app/gateways/: adyen_adapter.py  base.py  braintree_adapter.py  internal_mock_adapter.py  registry.py  stripe_adapter.py
payments_service/app/models/: customer.py  fees.py  gateway.py  payment.py  preprocessing.py  routing_data.py
payments_service/app/processors/: interfaces.py  registry.py
payments_service/app/repositories/: customer_repository.py  merchant_repository.py  payment_repository.py  (+1 more)
payments_service/scripts/: ingest_data.py  populate_dummy_data.py  renewal_worker.py  seed_local.py  status_monitor.py  stress_outage_simulator.py  test_api_endpoints.py  verify_agentic_routing.py  verify_braintree_e2e.py  verify_live_refunds.py  verify_live_routing.py  verify_paypal_e2e.py  verify_real_payments.py  verify_stripe_e2e.py
payments_service/tests/: factories.py  test_feedback_loop.py  test_payments.py  test_performance_repository.py  test_preprocessing_service.py  test_routing_data_service.py  test_routing_strategies.py
payments_ui/: Dockerfile  nginx.conf  package-lock.json  package.json
payments_ui/src/: App.jsx
(+98 files in other folders)
