[project]
name = "payments-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Ganga",email = "pablo.ganga1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[tool.poetry.source]
name = "src"
url = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
